Fix WebController with proper error handling and fallbacks